--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -80,3 +80,20 @@
 		color: #000000;
 		background-color: rgba(0, 255, 255, 0.75);
 	}
+
+	.data {
+		display: none;
+	}
+
+	.g-signin2 {
+		position: absolute;
+		top: 50%;
+		left: 50%;
+		margin-top: -50px;
+		margin-left: -50px;
+	}
+
+	.sign-in-wrap {
+		background-color: #ffffff;
+		position: absolute;
+	}
