--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -86,14 +86,18 @@
 	}
 
 	.g-signin2 {
-		position: absolute;
-		top: 50%;
+		position: relative;
+		/* top: 50%;
 		left: 50%;
 		margin-top: -50px;
-		margin-left: -50px;
+		margin-left: -50px; */
 	}
 
 	.sign-in-wrap {
 		background-color: #ffffff;
 		position: absolute;
+		top: 25%;
+		left: 25%;
+		width: 50%;
+		height: 50%;
 	}
