--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -4,7 +4,7 @@
 	}
 
 	body {
-		/* background-color: #000000; */
+		background-color: #000000;
 		margin: 0;
 		font-family: Helvetica, sans-serif;;
 		overflow: hidden;
@@ -79,16 +79,4 @@
 	button:active {
 		color: #000000;
 		background-color: rgba(0, 255, 255, 0.75);
-	}
-
-	.data {
-		display: none;
-	}
-
-	.g-signin2 {
-		position: relative;
-		top: 50%;
-		left: 50%;
-		margin-top: -50px;
-		margin-left: -50px;
 	}
